; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/atf/atf-c/detail/extr_list.c_atf_list_begin_c.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/atf/atf-c/detail/extr_list.c_atf_list_begin_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.list_entry* }
%struct.list_entry = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @atf_list_begin_c(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca %struct.list_entry*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load %struct.list_entry*, %struct.list_entry** %5, align 8
  store %struct.list_entry* %6, %struct.list_entry** %3, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %8 = load %struct.list_entry*, %struct.list_entry** %3, align 8
  %9 = getelementptr inbounds %struct.list_entry, %struct.list_entry* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @entry_to_citer(%struct.TYPE_4__* %7, i32 %10)
  ret i32 %11
}

declare dso_local i32 @entry_to_citer(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
